--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.37.0
-opencv-python==4.10.0.84
+streamlit==1.32.2
+opencv-python-headless==4.9.0.80
 numpy==1.26.4
 streamlit-webrtc==0.47.7
-av==11.0.0
+av==10.0.0
